# cpp_project_template

./: .gitignore  .syntastic_cpp_config  README.md
scripts/: build_debug.sh  build_release.sh  run_clang_tidy.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cc
src/factor/: CMakeLists.txt  factor.cc  factor.h  factor_bench.cc  factor_test.cc
src/proto/: CMakeLists.txt  api.proto
src/server/: CMakeLists.txt  server.cc
src/zeromq/: util.cc  util.h
src/zeromq_util/: CMakeLists.txt  util.cc  util.h
