CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(cpp_project_tempalte)
SET(CPP_PROJECT_TEMPLATE_VERSION_MAJOR 0)
SET(CPP_PROJECT_TEMPLATE_VERSION_MINOR 1)
SET(CPP_PROJECT_TEMPLATE_VERSION_PATCH 0)

SET(CMAKE_CXX_FLAGS_COMMON
    "-std=c++11 \
    -stdlib=libc++ \
    -Wall \
    -Wextra \
    -Werror")
SET(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} \
    ${CMAKE_CXX_FLAGS_COMMON}")
SET(CMAKE_CXX_FLAGS_RELEASE
    "${CMAKE_CXX_FLAGS_RELEASE} \
    ${CMAKE_CXX_FLAGS_COMMON}
    -O3")

ADD_SUBDIRECTORY(vendor/googlebenchmark)
ADD_SUBDIRECTORY(vendor/googletest)
ADD_SUBDIRECTORY(vendor/zeromq)
ADD_SUBDIRECTORY(vendor/zeromqcpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${GBENCH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQCPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQ_INCLUDE_DIRS})

LINK_DIRECTORIES(${ZEROMQ_LINK_DIRS})

ENABLE_TESTING()
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(factor)
ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(zeromq_util)
